# frameless

./: .gitignore  CMakeLists.txt
example/framelessdemo/: CMakeLists.txt
example/framelessdemo/android/: AndroidManifest.xml
example/framelessdemo/android/src/ca/calm/framelessdemo/: framelessdemo.java
example/framelessdemo/script/: package.py
example/framelessdemo/src/: dialog1.cpp  dialog1.h  dialog1.ui  main.cpp  maintitlebarbutton.cpp  maintitlebarbutton.h  maintitlebarbutton.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  w_maintitlebar.ui
include/frameless/: utils.h
include/frameless/custom/: toolbutton_righttop_windows10.h
lib/win32msvc/frameless/: frameless.lib
output/include/frameless/: __frameless_include__.h  frameless.h  utils.h
output/include/frameless/custom/: widget_background.h
output/include/frameless/titlebar/: titlebarlikewindows10.h
script/: output-cpplib.py  package.py
src/: __frameless_include__.cpp  frameless.cpp  frameless.h  utils.cpp  utils.h
src/custom/: toolbutton_righttop_windows10.cpp  widget_background.cpp
src/titlebar/: titlebarlikeandroid.cpp  titlebarlikeandroid.h  titlebarlikewindows10.cpp  titlebarlikewindows10.ui
